2009-09-28  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/chart.el:
	* emacs-lisp/eieio-base.el:
	* emacs-lisp/eieio-comp.el:
	* emacs-lisp/eieio-custom.el:
	* emacs-lisp/eieio-opt.el:
	* emacs-lisp/eieio-speedbar.el:
	* emacs-lisp/eieio.el: New files.

	* cedet/cedet-cscope.el:
	* cedet/cedet-files.el:
	* cedet/cedet-global.el:
	* cedet/cedet-idutils.el:
	* cedet/data-debug.el:
	* cedet/inversion.el:
	* cedet/mode-local.el:
	* cedet/pulse.el: New files.

2009-09-27  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el: Remove menu-bar-ediff-misc-menu from the Tools
	menu.

	* ediff-hook.el: Move menu-bar-ediff-misc-menu into
	menu-bar-ediff-menu.

	* emacs-lisp/lisp-mode.el: Add doc-string-elt property to
	define-overloadable-function.

	* progmodes/autoconf.el: Provide autoconf as well, so that this
	file can be `require'd.

	* emacs-lisp/cl-macs.el (deftype): Add to cl-loaddefs.

	* emacs-lisp/autoload.el (generated-autoload-feature)
	(generated-autoload-load-name): New vars.
	(autoload-rubric, autoload-generate-file-autoloads): Use them.
	(make-autoload): Recognize define-overloadable-function and
	defclass forms (for EIEIO).

	* Makefile.in (update-subdirs): Exclude cedet directory.

2009-09-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* term/ns-win.el: Don't set the region face background. (Bug#4381)

	* faces.el: Default light-background background for region face to
	ns_selection_color under NS.

2009-09-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/imap-hash.el: New library, see NEWS.

	* Makefile.in (ELCFILES): Add imap-hash.el.

2009-09-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help.el (help-for-help-internal): Don't purecopy the text (bug#4560).
	* isearch.el (isearch-help-for-help-internal): Purecopy the second arg.
	* help-macro.el (make-help-screen): Avoid using an ambiguous function
	definition where the docstring could be taken for the return value.

2009-09-26  Glenn Morris  <rgm@gnu.org>
